--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@supabase/supabase-js": "^1.35.4",
 		"cookie": "^0.4.1",
 		"daisyui": "^2.20.0",
+		"moment": "^2.29.4",
 		"svelte-images": "^0.0.95",
 		"vercel": "^27.2.0"
 	}
