--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"svelte-check": "svelte-check",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync",
@@ -21,18 +22,18 @@
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.46.0",
+		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.6",
 		"vite": "^3.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
 		"@supabase/supabase-js": "^1.35.4",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.65",
 		"cookie": "^0.4.1",
 		"daisyui": "^2.20.0",
 		"moment": "^2.29.4",
-		"svelte-images": "^0.0.95",
 		"vercel": "^27.2.0"
 	}
 }
