--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,11 +1,13 @@
 {
 	"name": "@yuxxeun",
 	"short_name": "@yuxxeun",
+	"start_url": "/",
 	"icons": [
 		{
 			"src": "/favicon/android-chrome-192x192.png",
 			"sizes": "192x192",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/favicon/android-chrome-512x512.png",
